2002-11-25  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (child_attach): Reset saw_create counter or subsequent
	attach will hang.

2002-11-25  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (psapi_get_dll_name): Fix a compiler warning.
	(struct so_stuff): Add end_addr field.
	(register_loaded_dll): Calculate and store end address of loaded dll.
	(solib_address): New function.
	(child_solib_loaded_library_pathname): Pass carefully constructed
	section info to safe_symbol_file_add rather than ignoring it.
	(get_child_debug_event): Call re_enable_breakpoints_in_shlibs when a
	DLL is loaded.
	(do_initial_child_stuff): Call disable_breakpoints_in_shlibs.
	(child_create_inferior): Fix a compiler warning.
	* config/i386/tm-cygwin.h (PC_SOLIB): Define new macro.
	(solib_address): Declare new function.

2002-11-25  Andrew Cagney  <cagney@redhat.com>

	* ns32k-tdep.c: Include "gdb_string.h".
	* mcore-tdep.c, cris-tdep.c, vax-tdep.c: Ditto.
	* sh3-rom.c, ppc-sysv-tdep.c, ns32knbsd-tdep.c: Ditto.
	* Makefile.in (sh3-rom.o): Update dependencies.
	(ppc-sysv-tdep.o, ns32k-tdep.o, mcore-tdep.o): Ditto.
	(cris-tdep.o): Ditto.

2002-11-25  David Carlton  <carlton@math.stanford.edu>

	* dwarf2read.c (scan_partial_symbols): Descend into namespace
	pdi's with no name.

2002-11-21  Daniel Jacobowitz  <drow@mvista.com>

	* maint.c (_initialize_maint_cmds): Fix typo.  From
	Francesco Potorti` <pot@gnu.org>.

2002-11-19  Andrew Cagney  <ac131313@redhat.com>

	Problems reported by Paul Eggert.
	* gdbarch.sh: Use `sort -k 3`.

2002-11-19  Andrew Cagney  <ac131313@redhat.com>

	From mainline:
	2002-11-12  Andrew Cagney  <ac131313@redhat.com>
	* utils.c (gdb_realpath): Make rp a constant pointer.
	
2002-11-13  Pierre Muller  <muller@ics.u-strasbg.fr>

	Import from mainline:

	* p-exp.y (name_not_typename): Use copy_name to
	set current_type variable for fields of THIS.

2002-11-12  Andrew Cagney  <ac131313@redhat.com>
