@@ -1,4 +1,4 @@
-/* config.in.  Generated automatically from configure.in by autoheader 2.13.  */
+/* config.in.  Generated automatically from configure.in by autoheader.  */
 
 /* Define if on AIX 3.
    System headers sometimes define this.
@@ -79,6 +79,9 @@
 
 /* Define if your struct reg has r_gs.  */
 #undef HAVE_STRUCT_REG_R_GS
+
+/* Define if the pread64 function is available.  */
+#undef HAVE_PREAD64
 
 /* Define if <link.h> exists and defines struct link_map which has
    members with an ``l_'' prefix.  (For Solaris, SVR4, and
